apps/media/bitmagnet/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitmagnet
  namespace: media
  labels:
    app: bitmagnet
spec:
  selector:
    matchLabels:
      app: bitmagnet
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bitmagnet
    spec:
      terminationGracePeriodSeconds: 5
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 10.43.0.10
      volumes:
        - name: gluetun-shared
          emptyDir:
            medium: Memory
        - name: bitmagnet-config
          emptyDir: {}
      containers:
        - name: gluetun
          image: qmcgaw/gluetun:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 0
            capabilities:
              add: ["NET_ADMIN"]
          ports:
            - name: http
              containerPort: 3333
            - name: bt-tcp
              containerPort: 3334
              protocol: TCP
            - name: bt-udp
              containerPort: 3334
              protocol: UDP
          volumeMounts:
            - name: gluetun-shared
              mountPath: /tmp/gluetun
        - name: bitmagnet
          image: ghcr.io/bitmagnet-io/bitmagnet:latest
          imagePullPolicy: IfNotPresent
          command:
            - bitmagnet
            - worker
            - run
            - --all
          volumeMounts:
            - name: gluetun-shared
              mountPath: /tmp/gluetun
            - name: bitmagnet-config
              mountPath: /root/.config/bitmagnet
