apps/media/bitmagnet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitmagnet
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: bitmagnet
  ports:
    - name: http
      port: 3333
      targetPort: 3333
