apps/media/bitmagnet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitmagnet
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: headscale-vpn-only@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: bitmagnet.sakul-flee.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bitmagnet
                port:
                  number: 3333
  tls:
    - hosts:
        - bitmagnet.sakul-flee.de
      secretName: bitmagnet-sakul-flee-de-tls
